// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`props.viewHSCodes is true 1`] = `
<div
  className="info"
>
  <div
    className="flex-100 layout-row layout-align-center-center height_box height_box"
  >
    <div
      className="flex-5 layout-row layout-align-center-center side_border"
    >
      <p
        className="flex-none layout-row layout-align-center-center cargo_unit"
      />
    </div>
    <div
      className="flex-20 layout-row layout-align-center-center side_border"
    >
      <p
        className="flex-none layout-row layout-align-center-center"
      >
        x 1
      </p>
      <div
        className="icon_cargo_item"
        style={
          Object {
            "backgroundImage": "url(https://assets.itsmycargo.com/assets/icons/container.svg)",
          }
        }
      />
    </div>
    <div
      className="flex-20 layout-row layout-align-center-center side_border"
    >
      <div
        className="layout-column"
      >
        <p
          className="flex-none layout-row layout-align-center-center"
        >
          <span
            className="cargo_type"
          >
            Dry Goods
          </span>
        </p>
        <p
          className="flex-none layout-row layout-align-center-center"
        >
          Cargo type
        </p>
      </div>
    </div>
    <div
      className="flex-55 layout-row"
    >
      <div
        className="open_panel panel flex-100 layout-row layout-wrap layout-align-none-center layout-wrap"
      >
        <CargoContainerGroupAggregated
          group={
            Object {
              "items": Array [
                Object {
                  "gross_weight": 76,
                  "payload_in_kg": 56,
                  "tare_weight": 20,
                },
              ],
              "quantity": "FOO_QUANTITY",
              "size_class": "dry_goods",
            }
          }
          t={[Function]}
        />
      </div>
    </div>
    <div
      className="flex-5 layout-row layout-align-center-center"
      onChange={[Function]}
      onClick={[Function]}
    >
      <i
        className=" fa fa-chevron-down clip pointy"
        style={
          Object {
            "background": "-webkit-linear-gradient(-90deg, #333,#fafafa)",
          }
        }
      />
    </div>
  </div>
  <div
    className="unit_viewer closed_panel"
  >
    <div
      className="flex-100 layout-row layout-align-none-start layout-wrap"
    >
      <div
        className="detailed_row flex-100 layout-row layout-wrap layout-align-none-center"
        key="UUID_MOCK_KEY_1"
      >
        <div
          className="flex-10 layout-row layout-align-center-center"
        >
          <p
            className="flex-none"
            style={
              Object {
                "fontSize": "10px",
              }
            }
          >
            Single Item
          </p>
        </div>
        <div
          className="unit_data_cell flex layout-row layout-align-center-center"
        >
          <div
            className="layout-column"
          >
            <p
              className="flex-none layout-row layout-align-center-center"
            >
              <span />
            </p>
            <p
              className="flex-none layout-row layout-align-center-center"
            >
              Weight Class
            </p>
          </div>
        </div>
        <div
          className="unit_data_cell flex layout-row layout-align-center-center"
        >
          <div
            className="layout-column"
          >
            <p
              className="flex-none layout-row layout-align-center-center"
            >
              <span>
                56
              </span>
               kg
            </p>
            <p
              className="flex-none layout-row layout-align-center-center"
            >
              Cargo Gross Weight
            </p>
          </div>
        </div>
        <div
          className="unit_data_cell flex layout-row layout-align-center-center"
        >
          <div
            className="layout-column"
          >
            <p
              className="flex-none layout-row layout-align-center-center"
            >
              <span>
                76
              </span>
               
               kg
            </p>
            <p
              className="flex-none layout-row layout-align-center-center"
            >
              Gross Weight
            </p>
          </div>
        </div>
        <div
          className="unit_data_cell flex layout-row layout-align-center-center"
        >
          <div
            className="layout-column"
          >
            <p
              className="flex-none layout-row layout-align-center-center"
            >
              <span>
                20
              </span>
               
               kg
            </p>
            <p
              className="flex-none layout-row layout-align-center-center"
            >
              Tare Weight
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`shallow render 1`] = `
<div
  className="info"
>
  <div
    className="flex-100 layout-row layout-align-center-center height_box height_box"
  >
    <div
      className="flex-5 layout-row layout-align-center-center side_border"
    >
      <p
        className="flex-none layout-row layout-align-center-center cargo_unit"
      />
    </div>
    <div
      className="flex-20 layout-row layout-align-center-center side_border"
    >
      <p
        className="flex-none layout-row layout-align-center-center"
      >
        x 1
      </p>
      <div
        className="icon_cargo_item"
        style={
          Object {
            "backgroundImage": "url(https://assets.itsmycargo.com/assets/icons/container.svg)",
          }
        }
      />
    </div>
    <div
      className="flex-20 layout-row layout-align-center-center side_border"
    >
      <div
        className="layout-column"
      >
        <p
          className="flex-none layout-row layout-align-center-center"
        >
          <span
            className="cargo_type"
          >
            Dry Goods
          </span>
        </p>
        <p
          className="flex-none layout-row layout-align-center-center"
        >
          Cargo type
        </p>
      </div>
    </div>
    <div
      className="flex-55 layout-row"
    >
      <div
        className="open_panel panel flex-100 layout-row layout-wrap layout-align-none-center layout-wrap"
      >
        <CargoContainerGroupAggregated
          group={
            Object {
              "items": Array [
                Object {
                  "gross_weight": 76,
                  "payload_in_kg": 56,
                  "tare_weight": 20,
                },
              ],
              "quantity": "FOO_QUANTITY",
              "size_class": "dry_goods",
            }
          }
          t={[Function]}
        />
      </div>
    </div>
    <div
      className="flex-5 layout-row layout-align-center-center"
      onChange={[Function]}
      onClick={[Function]}
    >
      <i
        className=" fa fa-chevron-down clip pointy"
        style={
          Object {
            "background": "-webkit-linear-gradient(-90deg, #333,#fafafa)",
          }
        }
      />
    </div>
  </div>
  <div
    className="unit_viewer closed_panel"
  >
    <div
      className="flex-100 layout-row layout-align-none-start layout-wrap"
    >
      <div
        className="detailed_row flex-100 layout-row layout-wrap layout-align-none-center"
        key="UUID_MOCK_KEY_0"
      >
        <div
          className="flex-10 layout-row layout-align-center-center"
        >
          <p
            className="flex-none"
            style={
              Object {
                "fontSize": "10px",
              }
            }
          >
            Single Item
          </p>
        </div>
        <div
          className="unit_data_cell flex layout-row layout-align-center-center"
        >
          <div
            className="layout-column"
          >
            <p
              className="flex-none layout-row layout-align-center-center"
            >
              <span />
            </p>
            <p
              className="flex-none layout-row layout-align-center-center"
            >
              Weight Class
            </p>
          </div>
        </div>
        <div
          className="unit_data_cell flex layout-row layout-align-center-center"
        >
          <div
            className="layout-column"
          >
            <p
              className="flex-none layout-row layout-align-center-center"
            >
              <span>
                56
              </span>
               kg
            </p>
            <p
              className="flex-none layout-row layout-align-center-center"
            >
              Cargo Gross Weight
            </p>
          </div>
        </div>
        <div
          className="unit_data_cell flex layout-row layout-align-center-center"
        >
          <div
            className="layout-column"
          >
            <p
              className="flex-none layout-row layout-align-center-center"
            >
              <span>
                76
              </span>
               
               kg
            </p>
            <p
              className="flex-none layout-row layout-align-center-center"
            >
              Gross Weight
            </p>
          </div>
        </div>
        <div
          className="unit_data_cell flex layout-row layout-align-center-center"
        >
          <div
            className="layout-column"
          >
            <p
              className="flex-none layout-row layout-align-center-center"
            >
              <span>
                20
              </span>
               
               kg
            </p>
            <p
              className="flex-none layout-row layout-align-center-center"
            >
              Tare Weight
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`state.unitView is true 1`] = `
<div
  className="info"
>
  <div
    className="flex-100 layout-row layout-align-center-center height_box height_box"
  >
    <div
      className="flex-5 layout-row layout-align-center-center side_border"
    >
      <p
        className="flex-none layout-row layout-align-center-center cargo_unit"
      />
    </div>
    <div
      className="flex-20 layout-row layout-align-center-center side_border"
    >
      <p
        className="flex-none layout-row layout-align-center-center"
      >
        x 1
      </p>
      <div
        className="icon_cargo_item"
        style={
          Object {
            "backgroundImage": "url(https://assets.itsmycargo.com/assets/icons/container.svg)",
          }
        }
      />
    </div>
    <div
      className="flex-20 layout-row layout-align-center-center side_border"
    >
      <div
        className="layout-column"
      >
        <p
          className="flex-none layout-row layout-align-center-center"
        >
          <span
            className="cargo_type"
          >
            Dry Goods
          </span>
        </p>
        <p
          className="flex-none layout-row layout-align-center-center"
        >
          Cargo type
        </p>
      </div>
    </div>
    <div
      className="flex-55 layout-row"
    >
      <div
        className="closed_panel panel flex-100 layout-row layout-wrap layout-align-none-center layout-wrap"
      >
        <CargoContainerGroupAggregated
          group={
            Object {
              "items": Array [
                Object {
                  "gross_weight": 76,
                  "payload_in_kg": 56,
                  "tare_weight": 20,
                },
              ],
              "quantity": "FOO_QUANTITY",
              "size_class": "dry_goods",
            }
          }
          t={[Function]}
        />
      </div>
    </div>
    <div
      className="flex-5 layout-row layout-align-center-center"
      onChange={[Function]}
      onClick={[Function]}
    >
      <i
        className=" fa fa-chevron-down clip pointy"
        style={
          Object {
            "background": "-webkit-linear-gradient(-90deg, #333,#fafafa)",
          }
        }
      />
    </div>
  </div>
  <div
    className="unit_viewer closed_panel"
  >
    <div
      className="flex-100 layout-row layout-align-none-start layout-wrap"
    >
      <div
        className="detailed_row flex-100 layout-row layout-wrap layout-align-none-center"
        key="UUID_MOCK_KEY_3"
      >
        <div
          className="flex-10 layout-row layout-align-center-center"
        >
          <p
            className="flex-none"
            style={
              Object {
                "fontSize": "10px",
              }
            }
          >
            Single Item
          </p>
        </div>
        <div
          className="unit_data_cell flex layout-row layout-align-center-center"
        >
          <div
            className="layout-column"
          >
            <p
              className="flex-none layout-row layout-align-center-center"
            >
              <span />
            </p>
            <p
              className="flex-none layout-row layout-align-center-center"
            >
              Weight Class
            </p>
          </div>
        </div>
        <div
          className="unit_data_cell flex layout-row layout-align-center-center"
        >
          <div
            className="layout-column"
          >
            <p
              className="flex-none layout-row layout-align-center-center"
            >
              <span>
                56
              </span>
               kg
            </p>
            <p
              className="flex-none layout-row layout-align-center-center"
            >
              Cargo Gross Weight
            </p>
          </div>
        </div>
        <div
          className="unit_data_cell flex layout-row layout-align-center-center"
        >
          <div
            className="layout-column"
          >
            <p
              className="flex-none layout-row layout-align-center-center"
            >
              <span>
                76
              </span>
               
               kg
            </p>
            <p
              className="flex-none layout-row layout-align-center-center"
            >
              Gross Weight
            </p>
          </div>
        </div>
        <div
          className="unit_data_cell flex layout-row layout-align-center-center"
        >
          <div
            className="layout-column"
          >
            <p
              className="flex-none layout-row layout-align-center-center"
            >
              <span>
                20
              </span>
               
               kg
            </p>
            <p
              className="flex-none layout-row layout-align-center-center"
            >
              Tare Weight
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`state.viewer is true 1`] = `
<div
  className="info"
>
  <div
    className="flex-100 layout-row layout-align-center-center height_box height_box"
  >
    <div
      className="flex-5 layout-row layout-align-center-center side_border"
    >
      <p
        className="flex-none layout-row layout-align-center-center cargo_unit"
      />
    </div>
    <div
      className="flex-20 layout-row layout-align-center-center side_border"
    >
      <p
        className="flex-none layout-row layout-align-center-center"
      >
        x 1
      </p>
      <div
        className="icon_cargo_item"
        style={
          Object {
            "backgroundImage": "url(https://assets.itsmycargo.com/assets/icons/container.svg)",
          }
        }
      />
    </div>
    <div
      className="flex-20 layout-row layout-align-center-center side_border"
    >
      <div
        className="layout-column"
      >
        <p
          className="flex-none layout-row layout-align-center-center"
        >
          <span
            className="cargo_type"
          >
            Dry Goods
          </span>
        </p>
        <p
          className="flex-none layout-row layout-align-center-center"
        >
          Cargo type
        </p>
      </div>
    </div>
    <div
      className="flex-55 layout-row"
    >
      <div
        className="open_panel panel flex-100 layout-row layout-wrap layout-align-none-center layout-wrap"
      >
        <CargoContainerGroupAggregated
          group={
            Object {
              "items": Array [
                Object {
                  "gross_weight": 76,
                  "payload_in_kg": 56,
                  "tare_weight": 20,
                },
              ],
              "quantity": "FOO_QUANTITY",
              "size_class": "dry_goods",
            }
          }
          t={[Function]}
        />
      </div>
    </div>
    <div
      className="flex-5 layout-row layout-align-center-center"
      onChange={[Function]}
      onClick={[Function]}
    >
      <i
        className=" fa fa-chevron-down clip pointy"
        style={
          Object {
            "background": "-webkit-linear-gradient(-90deg, #333,#fafafa)",
          }
        }
      />
    </div>
  </div>
  <div
    className="unit_viewer closed_panel"
  >
    <div
      className="flex-100 layout-row layout-align-none-start layout-wrap"
    >
      <div
        className="detailed_row flex-100 layout-row layout-wrap layout-align-none-center"
        key="UUID_MOCK_KEY_5"
      >
        <div
          className="flex-10 layout-row layout-align-center-center"
        >
          <p
            className="flex-none"
            style={
              Object {
                "fontSize": "10px",
              }
            }
          >
            Single Item
          </p>
        </div>
        <div
          className="unit_data_cell flex layout-row layout-align-center-center"
        >
          <div
            className="layout-column"
          >
            <p
              className="flex-none layout-row layout-align-center-center"
            >
              <span />
            </p>
            <p
              className="flex-none layout-row layout-align-center-center"
            >
              Weight Class
            </p>
          </div>
        </div>
        <div
          className="unit_data_cell flex layout-row layout-align-center-center"
        >
          <div
            className="layout-column"
          >
            <p
              className="flex-none layout-row layout-align-center-center"
            >
              <span>
                56
              </span>
               kg
            </p>
            <p
              className="flex-none layout-row layout-align-center-center"
            >
              Cargo Gross Weight
            </p>
          </div>
        </div>
        <div
          className="unit_data_cell flex layout-row layout-align-center-center"
        >
          <div
            className="layout-column"
          >
            <p
              className="flex-none layout-row layout-align-center-center"
            >
              <span>
                76
              </span>
               
               kg
            </p>
            <p
              className="flex-none layout-row layout-align-center-center"
            >
              Gross Weight
            </p>
          </div>
        </div>
        <div
          className="unit_data_cell flex layout-row layout-align-center-center"
        >
          <div
            className="layout-column"
          >
            <p
              className="flex-none layout-row layout-align-center-center"
            >
              <span>
                20
              </span>
               
               kg
            </p>
            <p
              className="flex-none layout-row layout-align-center-center"
            >
              Tare Weight
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
